@@ -1,5 +1,5 @@
 /* GSequencer - Advanced GTK Sequencer
- * Copyright (C) 2005-2020 Joël Krähemann
+ * Copyright (C) 2005-2021 Joël Krähemann
  *
  * This file is part of GSequencer.
  *
@@ -1217,8 +1217,8 @@ ags_machine_connect(AgsConnectable *connectable)
     ags_machine_find_port(machine);
   }
 
-  g_signal_connect(G_OBJECT(machine), "map-recall",
-		   G_CALLBACK(ags_machine_map_recall_callback), NULL);
+  g_signal_connect_after(G_OBJECT(machine), "map-recall",
+			 G_CALLBACK(ags_machine_map_recall_callback), NULL);
   
   if(machine->bridge != NULL){
     ags_connectable_connect(AGS_CONNECTABLE(machine->bridge));
