@@ -40,6 +40,12 @@
   <url type="homepage">https://nongnu.org/gsequencer</url>
 
   <releases>
+    <release version="3.7.50" date="2021-03-16">
+      <description>
+	<p>fixed missing loop information after map recall.</p>
+      </description>
+    </release>
+
     <release version="3.7.49" date="2021-03-16">
       <description>
 	<p>fixed missing loop information after machine added.</p>
