@@ -1,3 +1,8 @@
+ags (3.7.50)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed missing loop information after map recall
+
 ags (3.7.49)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
